FusionDev Backup1/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Age__c</fullName>
        <description>Returns &quot;Created Current FY&quot; if account was created in current year, &quot;Created Last FY&quot; if created in previous year, and &quot;Created Prior to Last FY&quot; if create date prior to last FY. Used in reporting.</description>
        <formula>If(
YEAR(Today()) = YEAR(DATEVALUE(CreatedDate)),&quot;Created Current FY&quot;,
IF(
(YEAR(Today()) - YEAR(DATEVALUE(CreatedDate)) = 1),&quot;Created Last FY&quot;,&quot;Created Prior to Last FY&quot;
))</formula>
        <inlineHelpText>Returns &quot;Created Current FY&quot; if account was created in current year, &quot;Created Last FY&quot; if created in previous year, and &quot;Created Prior to Last FY&quot; if create date prior to last FY. Used in reporting.</inlineHelpText>
        <label>Account Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Agent ID for InContact</description>
        <label>Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Population__c</fullName>
        <label>Area Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5,000</fullName>
                </value>
                <value>
                    <fullName>5,001 - 25,000</fullName>
                </value>
                <value>
                    <fullName>25,001 - 75,000</fullName>
                </value>
                <value>
                    <fullName>75,001 - 200,000</fullName>
                </value>
                <value>
                    <fullName>200,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillAndShipAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to determine if the billing and shipping addresses are the same for the Customer entered.</description>
        <label>Bill &amp; Ship Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <label>Billing Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>DIB</fullName>
                </value>
                <value>
                    <fullName>Ferguson</fullName>
                </value>
                <value>
                    <fullName>Mid States</fullName>
                </value>
                <value>
                    <fullName>NBS</fullName>
                </value>
                <value>
                    <fullName>Sports Inc</fullName>
                </value>
                <value>
                    <fullName>TrueValue</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commerce_Cloud_Created_By__c</fullName>
        <label>Commerce Cloud Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCodeID__c</fullName>
        <description>This is defaulted from the SAP system during customer creation.</description>
        <label>Company Code ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <description>This is defaulted from SAP during the record creation.</description>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brute</fullName>
                </value>
                <value>
                    <fullName>Canyon</fullName>
                </value>
                <value>
                    <fullName>Engel</fullName>
                </value>
                <value>
                    <fullName>Grizzly</fullName>
                </value>
                <value>
                    <fullName>Ice Hole</fullName>
                </value>
                <value>
                    <fullName>Igloo</fullName>
                </value>
                <value>
                    <fullName>K2</fullName>
                </value>
                <value>
                    <fullName>Orca</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pelican</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Month__c</fullName>
        <label>Credit Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Year__c</fullName>
        <label>Credit Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expired__c</fullName>
        <formula>IF(OR(ISPICKVAL(Credit_Card_Expiration_Year__c,&quot;&quot;),ISPICKVAL(Credit_Card_Expiration_Month__c,&quot;&quot;),VALUE(TEXT(Credit_Card_Expiration_Year__c)) &lt; YEAR(TODAY()), AND(VALUE(TEXT(Credit_Card_Expiration_Year__c)) = YEAR(TODAY()),VALUE(TEXT(Credit_Card_Expiration_Month__c)) &lt; MONTH(TODAY()))),TRUE, FALSE)</formula>
        <label>Credit Card Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Exposure_Horizon__c</fullName>
        <label>Credit Exposure Horizon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Exposure__c</fullName>
        <label>Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_Date__c</fullName>
        <label>Credit Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Hold_Released__c</fullName>
        <description>Populated via workflow field update with date credit hold last updated from true to false</description>
        <inlineHelpText>Populated via workflow field update with date credit hold last updated from true to false</inlineHelpText>
        <label>Credit Hold Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <description>Customer Number from SAP</description>
        <inlineHelpText>Customer Number will update once the Account created in SAP</inlineHelpText>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerShipAccount__c</fullName>
        <description>This is a user entered filed, populated during the customer creation.</description>
        <label>Customer Ship Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer_Employee_Dynamic</fullName>
                </value>
                <value>
                    <fullName>Dealer_Employee_Static</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Friends_Family</fullName>
                </value>
                <value>
                    <fullName>IDme_Government</fullName>
                </value>
                <value>
                    <fullName>IDme_Military</fullName>
                </value>
                <value>
                    <fullName>IDme_Responder</fullName>
                </value>
                <value>
                    <fullName>ProGuide_BBQ_Static</fullName>
                </value>
                <value>
                    <fullName>ProGuide_Beer_Static</fullName>
                </value>
                <value>
                    <fullName>ProGuide_Fish_Static</fullName>
                </value>
                <value>
                    <fullName>ProGuide_Hunt_Static</fullName>
                </value>
                <value>
                    <fullName>ProGuide_Outdoor_Static</fullName>
                </value>
                <value>
                    <fullName>ProGuide_Ranch_Static</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Search_and_Rescue</fullName>
                </value>
                <value>
                    <fullName>Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
                <value>
                    <fullName>Vendor_Supplier_Static</fullName>
                </value>
                <value>
                    <fullName>YETI_Employee</fullName>
                </value>
                <value>
                    <fullName>YETI_Industry_Dynamic</fullName>
                </value>
                <value>
                    <fullName>YETI_Industry_Static</fullName>
                </value>
                <value>
                    <fullName>YETI_Pro_Dynamic</fullName>
                </value>
                <value>
                    <fullName>YETI_Pro_Static</fullName>
                </value>
                <value>
                    <fullName>YETI_Select</fullName>
                </value>
                <value>
                    <fullName>Vendor_Supplier_Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>ENSX_EDM__SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_In_Arears__c</fullName>
        <label>Days In Arears</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Billing_Group__c</fullName>
        <label>Dealer Billing Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Dealer</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Big Box Dealer</fullName>
                </value>
                <value>
                    <fullName>Custom Logo</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Dealer</fullName>
                </value>
                <value>
                    <fullName>Dealer Employee</fullName>
                </value>
                <value>
                    <fullName>Drop Ship Dealer</fullName>
                </value>
                <value>
                    <fullName>Friends and Family</fullName>
                </value>
                <value>
                    <fullName>Fund Raiser</fullName>
                </value>
                <value>
                    <fullName>Governement-First Responder</fullName>
                </value>
                <value>
                    <fullName>International Dealer</fullName>
                </value>
                <value>
                    <fullName>March Madness</fullName>
                </value>
                <value>
                    <fullName>Marketing/Media</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Online Direct</fullName>
                </value>
                <value>
                    <fullName>POS Template Customer</fullName>
                </value>
                <value>
                    <fullName>Pro Guide</fullName>
                </value>
                <value>
                    <fullName>Promotional Dealer</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Yeti Ambassador</fullName>
                </value>
                <value>
                    <fullName>Yeti Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <label>Dealer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliveries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliveries</label>
        <referenceTo>Deliveries__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DepositeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Data required when creating a new customer.</description>
        <label>Deposit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistributionChannelID__c</fullName>
        <description>This value is defaulted from SAP system during customer creation.</description>
        <label>Distribution Channel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <description>This data is defaulted from SAP system during customer creation.</description>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Center__c</fullName>
        <label>Distribution Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Values needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DivisionID__c</fullName>
        <description>This is defaulted from SAP system during customer creation.</description>
        <label>Division ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>This will be defaulted from SAP system during customer creation.</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDI_Ship_To_Code__c</fullName>
        <description>Store Number aka EDI Store/Billing Number</description>
        <inlineHelpText>This is the store number or billing number used by billing groups. (i.e. Ace Hardware, TrueValue &amp; Do It Best)</inlineHelpText>
        <label>EDI Store Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Industry__c</fullName>
        <inlineHelpText>CLOTH - Clothing/Apparel
FARM - Farm &amp; Ranch
GOVT - Government
HARD - Hardware
INDUS - Industrial
LUMBER - Lumber
MARINE - Marine/Boating
MED - Medical
OTHER
PROMO - Promotional
SPORT - Sporting Goods
TRUCK - Automotive Truck Aftermarket</inlineHelpText>
        <label>Customer Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLOTH</fullName>
                </value>
                <value>
                    <fullName>FARM</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HARD</fullName>
                </value>
                <value>
                    <fullName>INDUS</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>MARINE</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
                <value>
                    <fullName>SPORT</fullName>
                </value>
                <value>
                    <fullName>TRUCK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This is used to capture email during the business account creation.</description>
        <inlineHelpText>Test helptext</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Epicor_Customer_ID__c</fullName>
        <label>Epicor Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epicor_Ship_To_Num__c</fullName>
        <label>Epicor Ship To Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if you want to remove this location from your map</inlineHelpText>
        <label>Exclude from Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G_A__c</fullName>
        <label>G&amp;A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Affiliation__c</fullName>
        <label>Hardware Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopper_Product__c</fullName>
        <label>Hopper/Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horiz_Date__c</fullName>
        <formula>TODAY() + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horizon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Horizon_Date__c</fullName>
        <label>Horizon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FARM/FLEET/GENERAL</fullName>
                </value>
                <value>
                    <fullName>HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HUNT/FISH</fullName>
                </value>
                <value>
                    <fullName>INDOOR/OUTDOOR LIVING</fullName>
                </value>
                <value>
                    <fullName>OTHER RETAIL</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR RECREATION</fullName>
                </value>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
                <value>
                    <fullName>ACTION SPORTS</fullName>
                </value>
                <value>
                    <fullName>FARM/FLEET</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>HOME/HARDWARE</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>MOTOR VEHICLE</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OEM</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OUTDOOR</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Category__c</fullName>
        <label>Industry Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFTERMARKET ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>APPAREL/SHOES</fullName>
                </value>
                <value>
                    <fullName>AUTO/MOTO/MARINE/RV MFG</fullName>
                </value>
                <value>
                    <fullName>AUTO/RV</fullName>
                </value>
                <value>
                    <fullName>BARBEQUE</fullName>
                </value>
                <value>
                    <fullName>COLLEGIATE/BOOKSTORE</fullName>
                </value>
                <value>
                    <fullName>FLY FISHING SPECIALTY</fullName>
                </value>
                <value>
                    <fullName>FOOD/BEVERAGE</fullName>
                </value>
                <value>
                    <fullName>GENERAL STORE</fullName>
                </value>
                <value>
                    <fullName>GIFTING/BOUTIQUE</fullName>
                </value>
                <value>
                    <fullName>GOLF/COUNTRY CLUB</fullName>
                </value>
                <value>
                    <fullName>GROCERY/LIQUOR</fullName>
                </value>
                <value>
                    <fullName>GUN/ARCHERY/HUNTING SUPPLY</fullName>
                </value>
                <value>
                    <fullName>HARDWARE</fullName>
                </value>
                <value>
                    <fullName>HOME FURNITURE/FIXTURES</fullName>
                </value>
                <value>
                    <fullName>HUNT AND FISH</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL MATERIALS/SUPPLY</fullName>
                </value>
                <value>
                    <fullName>LAND/WATER POWERSPORTS</fullName>
                </value>
                <value>
                    <fullName>LIVESTOCK/PET SUPPLY</fullName>
                </value>
                <value>
                    <fullName>MARINE/MARINA</fullName>
                </value>
                <value>
                    <fullName>MILITARY/POLICE</fullName>
                </value>
                <value>
                    <fullName>ORIGINAL EQUIPMENT MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>OUTDOOR GENERAL</fullName>
                </value>
                <value>
                    <fullName>POOL/PATIO/FIRE</fullName>
                </value>
                <value>
                    <fullName>PROMO GOODS</fullName>
                </value>
                <value>
                    <fullName>RECREATIONAL</fullName>
                </value>
                <value>
                    <fullName>ROD/BAIT/TACKLE</fullName>
                </value>
                <value>
                    <fullName>SPORTING GOODS</fullName>
                </value>
                <value>
                    <fullName>SURF/SKATE/SKI/PADDLE/BIKE</fullName>
                </value>
                <value>
                    <fullName>TRACTOR/TRAILER/CONSTRUCTION EQUIPMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inside_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Rep_Email__c</fullName>
        <formula>Inside_SR__r.Trading_Post_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Rep_Phone__c</fullName>
        <formula>Inside_SR__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_SR_Name__c</fullName>
        <formula>Inside_SR__r.FirstName + &apos; &apos; + Inside_SR__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>YETI Inside Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep_Text__c</fullName>
        <label>Inside Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <label>Inside Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Preference__c</fullName>
        <label>Invoice Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Email and Mail</fullName>
                </value>
                <value>
                    <fullName>No Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTaxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This data is required to determine weather the account is taxable or no.</description>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>